--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="grid md:grid-cols-3 gap-8 text-center">
       <div class="p-6 bg-white rounded shadow">
         <h4 class="font-bold text-xl mb-2 text-blue-400">Création de Profil</h4>
+        <img src="photo_2025-05-30_13-36-17.jpg" alt="">
         <p>Construisez un profil professionnel complet pour vous démarquer.</p>
       </div>
       <div class="p-6 bg-white rounded shadow">
@@ -69,14 +70,17 @@
       <div class="grid md:grid-cols-3 gap-8">
         <div class="p-6 bg-white rounded shadow">
           <h4 class="font-semibold text-lg text-blue-400">Mon profil</h4>
+          <img src="b2cbd44e4efaa0a7972950b4cf52c175.jpg" alt="">
           <p>Complétez et mettez à jour vos informations professionnelles.</p>
         </div>
         <div class="p-6 bg-white rounded shadow">
           <h4 class="font-semibold text-lg text-blue-400">Mes candidatures</h4>
+          <img src="photo_2025-05-30_13-28-54.jpg" alt="">
           <p>Suivez l'état de vos candidatures en temps réel.</p>
         </div>
         <div class="p-6 bg-white rounded shadow">
           <h4 class="font-semibold text-lg text-blue-400">Suggestions d’emploi</h4>
+          <img src="186404a3f274a14c7073d4238a096c8d.jpg" alt="">
           <p>Recevez des recommandations personnalisées basées sur votre profil.</p>
         </div>
       </div>
@@ -87,11 +91,19 @@
   <section id="entreprises" class="py-16 bg-white">
     <div class="container mx-auto text-center">
       <h3 class="text-3xl font-bold mb-4 text-yellow-500">Espace Entreprises</h3>
-      <p class="max-w-2xl mx-auto mb-6">Accédez à une base de données de profils étudiants qualifiés. Recherchez par compétence, domaine d'études ou localisation.</p>
+  
+      <div class="p-6 bg-white rounded shadow">
+        <img src="e65f6ed9df816df44ba3c40461f9ffdf.jpg" alt="Illustration entreprise" class="w-60 mx-auto rounded">
+      </div>
+  
+      <p class="max-w-2xl mx-auto mb-6">
+        Accédez à une base de données de profils étudiants qualifiés. Recherchez par compétence, domaine d'études ou localisation.
+      </p>
+      
       <button class="bg-blue-400 text-white px-6 py-3 rounded">Voir les profils</button>
     </div>
   </section>
-
+  
   <!-- Dépôt de CV -->
   <section id="depotcv" class="py-16 bg-gray-100">
     <div class="container mx-auto text-center">
